--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<a class="center outbound" href="https://www.headspace.com/">HeadSpace</a>
 		<img class="center" id="calm" src="calm.png" alt="Calm" width="650" height="500">
 		<a class="center outbound" href="https://www.calm.com/">Calm</a>
-		<img class="center" id="donothing" src="Donothing.png" alt="DoNothing" width="650" height="500">
+		<img class="center" id="donothing" src="donothing.png" alt="DoNothing" width="650" height="500">
 		<a class="center outbound" href="http://www.donothingfor2minutes.com/">Do Nothing for 2 Minutes</a>
 	</div>
 
