--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
 			<nav>
 				<ul id="navul">
-					<li class="navli"><a href="Index.html">Home</a></li>
+					<li class="navli"><a href="ndex.html">Home</a></li>
 					<li class="navli"><a href="listen.html">Listen</a></li>
 					<li class="navli"><a href="learn.html">Learn</a></li>
 					<li class="navli"><a href="inspire.html">Inspire</a></li>
@@ -26,7 +26,6 @@
 	</header>
 
 	<div class="content">
-
 		<div id="table">
 
 			<div id="focuss">
@@ -57,14 +56,29 @@
 		</div>
 	</div>
 
-	<div>
+	<!-- <div> *Makes Images Vertical*
 		<h2><span>Other Links to Find Your Calm</span></h2>
 		<img class="center" id="headspace" src="headspace.png" alt="Headspace" width="650" height="500">
 		<a class="center outbound" href="https://www.headspace.com/">HeadSpace</a>
 		<img class="center" id="calm" src="calm.png" alt="Calm" width="650" height="500">
 		<a class="center outbound" href="https://www.calm.com/">Calm</a>
-		<img class="center" id="donothing" src="donothing.png" alt="DoNothing" width="650" height="500">
+		<img class="center" id="donothing" src="Donothing.png" alt="DoNothing" width="650" height="500">
 		<a class="center outbound" href="http://www.donothingfor2minutes.com/">Do Nothing for 2 Minutes</a>
+	</div> -->
+
+	<div class="row">
+		<div class="column">
+			<img class="center" id="headspace" src="headspace.png" alt="Headspace" width="650" height="500">
+			<a class="center outbound" href="https://www.headspace.com/">HeadSpace</a>
+		</div>
+		<div class="column">
+			<img class="center" id="calm" src="calm.png" alt="Calm" width="650" height="500">
+			<a class="center outbound" href="https://www.calm.com/">Calm</a>
+		</div>
+		<div class="column">
+			<img class="center" id="donothing" src="Donothing.png" alt="DoNothing" width="650" height="500">
+			<a class="center outbound" href="http://www.donothingfor2minutes.com/">Do Nothing for 2 Minutes</a>
+		</div>
 	</div>
 
 	<form id="myBtn" style="display: inline" action="#top" method="get">
