--- a/listen.html
+++ b/listen.html
@@ -16,7 +16,7 @@
 		<div class="container">
 			<nav id="listen-selection">
 				<ul id="navul">
-					<li class="navli"><a href="Index.html">Home</a></li>
+					<li class="navli"><a href="index.html">Home</a></li>
 					<li class="navli"><a href="listen.html">Listen</a></li>
 					<li class="navli"><a href="learn.html">Learn</a></li>
 					<li class="navli"><a href="inspire.html">Inspire</a></li>
@@ -33,8 +33,8 @@
 		</audio>
 	</div>
 
-	<form id ="myBtn" style="display: inline" action="#top" method="get">
-	  <button>Top</button>
+	<form id="myBtn" style="display: inline" action="#top" method="get">
+		<button>Top</button>
 	</form>
 
 </body>
