--- a/learn.html
+++ b/learn.html
@@ -10,7 +10,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato%7CLora" rel="stylesheet">
 </head>
 
-
 <body>
 
 	<header class="learn-header">
@@ -18,7 +17,7 @@
 		<div class="container">
 			<nav id="learn-selection">
 				<ul id="navul">
-					<li class="navli"><a href="Index.html">Home</a></li>
+					<li class="navli"><a href="index.html">Home</a></li>
 					<li class="navli"><a href="listen.html">Listen</a></li>
 					<li class="navli"><a href="learn.html">Learn</a></li>
 					<li class="navli"><a href="inspire.html">Inspire</a></li>
@@ -27,21 +26,33 @@
 		</div>
 	</header>
 
-
-
-	<div id="learn-stuff">
+	<!--<div id="learn-stuff">
 	<h1><span>Great Books to Relax With</span></h1>
-		<a href="https://www.amazon.com/dp/0143130773/ref=cm_sw_r_sms_c_api_i_pyH0CbQ0BD9D5"><img class="center" src="book1.jpg" height="400" alt=""> </a>
+	<a href="https://www.amazon.com/dp/0143130773/ref=cm_sw_r_sms_c_api_i_pyH0CbQ0BD9D5"><img class="center" src="book1.jpg" height="400" alt=""> </a>
 		<h2 class="desc"><span>The Things You Can See Only When You Slow Down</span></h2>
 		<a href="https://www.amazon.com/dp/1937006883/ref=cm_sw_r_sms_c_api_i_cvH0Cb64S75RE"><img class="center" src="book2.jpg" height="400" alt=""></a>
 		<h2 class="desc"><span>How to Love</span></h2>
 		<a href="https://www.amazon.com/dp/0143124056/ref=cm_sw_r_sms_c_api_i_ezH0Cb92AK2N1"><img class="center" src="book3.jpg" height="400" alt=""></a>
-		<h2 class="desc"><span>A Thousand Mornings</span></h2>
+		<h2 class="desc"><span>A Thousand Mornings</span></h2> -->
 
+	<div class="row" id="learn-stuff">
+		<h1><span>Great Books to Relax With</span></h1>
+		<div class="column">
+			<h2 class="desc"><span>How to Love</span></h2>
+			<a href="https://www.amazon.com/dp/1937006883/ref=cm_sw_r_sms_c_api_i_cvH0Cb64S75RE"><img class="center" src="book2.jpg" height="400" alt=""></a>
+		</div>
+		<div class="column">
+			<h2 class="desc"><span>The Things You Can See Only When You Slow Down</span></h2>
+			<a href="https://www.amazon.com/dp/0143130773/ref=cm_sw_r_sms_c_api_i_pyH0CbQ0BD9D5"><img class="center" src="book1.jpg" height="400" alt=""> </a>
+		</div>
+		<div class="column">
+			<h2 class="desc"><span>A Thousand Mornings</span></h2>
+			<a href="https://www.amazon.com/dp/0143124056/ref=cm_sw_r_sms_c_api_i_ezH0Cb92AK2N1"><img class="center" src="book3.jpg" height="400" alt=""></a>
+		</div>
 	</div>
 
-	<form id ="myBtn" style="display: inline" action="#top" method="get">
-	  <button>Top</button>
+	<form id="myBtn" style="display: inline" action="#top" method="get">
+		<button>Top</button>
 	</form>
 
 </body>
