--- a/inspire.html
+++ b/inspire.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<nav id="inspire-selection">
 				<ul id="navul">
-					<li class="navli"><a href="Index.html">Home</a></li>
+					<li class="navli"><a href="index.html">Home</a></li>
 					<li class="navli"><a href="listen.html">Listen</a></li>
 					<li class="navli"><a href="learn.html">Learn</a></li>
 					<li class="navli"><a href="inspire.html">Inspire</a></li>
@@ -32,7 +32,7 @@
 
 	<iframe align="center" width="650" height="400" src="https://www.youtube.com/embed/MA86tG0VuRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<!--	<video class="center" width="650" height="400" controls>
+	<!--	<video class="center" width="650" height="400" controls>
 <source src="CultivationIsUnlimited.mov" type="video/mp4">
 		Your browser does not support the video tag.
 	</video> -->
@@ -54,7 +54,7 @@
 		</ul>
 	</div>
 
-	<form id ="myBtn" style="display: inline" action="#top" method="get">
+	<form id="myBtn" style="display: inline" action="#top" method="get">
 		<button>Top</button>
 	</form>
 
