--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
 			<nav>
 				<ul id="navul">
-					<li class="navli"><a href="ndex.html">Home</a></li>
+					<li class="navli"><a href="index.html">Home</a></li>
 					<li class="navli"><a href="listen.html">Listen</a></li>
 					<li class="navli"><a href="learn.html">Learn</a></li>
 					<li class="navli"><a href="inspire.html">Inspire</a></li>
