--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html class="home-bg" lang="en">
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Peace & Wellbeing</title>
+	<link rel="icon" href="Well-Being.png">
 	<link rel="stylesheet" type="text/css" href="base.css">
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato%7CLora" rel="stylesheet">
 </head>
-
 <body>
-
 	<header class="home-header">
 		<div class="container">
 			<nav>
 				<ul id="navul">
-					<li class="navli"><a href="index.html">Home</a></li>
+					<li class="navli"><a href="ndex.html">Home</a></li>
 					<li class="navli"><a href="listen.html">Listen</a></li>
 					<li class="navli"><a href="learn.html">Learn</a></li>
 					<li class="navli"><a href="inspire.html">Inspire</a></li>
@@ -24,10 +22,8 @@
 			</nav>
 		</div>
 	</header>
-
 	<div class="content">
 		<div id="table">
-
 			<div id="focuss">
 				<h1><span>Find Your Calm</span></h1>
 				<h2 id="or"><span>What is Your Focus for Today?</span></h2>
@@ -36,7 +32,6 @@
 					<button type="submit" value="Submit">Submit</button>
 				</form>
 			</div>
-
 			<table>
 				<tr>
 					<td>&nbsp;Mind</td>
@@ -50,9 +45,7 @@
 					<td>&nbsp;Soul</td>
 					<td>&nbsp;30</td>
 				</tr>
-
 			</table>
-
 		</div>
 	</div>
 
@@ -80,11 +73,8 @@
 			<a class="center outbound" href="http://www.donothingfor2minutes.com/">Do Nothing for 2 Minutes</a>
 		</div>
 	</div>
-
 	<form id="myBtn" style="display: inline" action="#top" method="get">
 		<button>Top</button>
 	</form>
-
 </body>
-
 </html>
