--- a/listen.html
+++ b/listen.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html class="listen-bg" lang="en">
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Listen</title>
+		<link rel="icon" href="Well-Being.png">
 	<link rel="stylesheet" type="text/css" href="base.css">
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato%7CLora" rel="stylesheet">
 </head>
-
 <body>
-
 	<header class="listen-header">
 		<div class="container">
 			<nav id="listen-selection">
@@ -24,7 +22,6 @@
 			</nav>
 		</div>
 	</header>
-
 	<div class="center">
 		<audio controls loop>
 			<source src="ocean_sounds.mp3" type="audio/mpeg">
@@ -32,11 +29,8 @@
 			Your browser does not support the audio tag.
 		</audio>
 	</div>
-
 	<form id="myBtn" style="display: inline" action="#top" method="get">
 		<button>Top</button>
 	</form>
-
 </body>
-
 </html>
