--- a/learn.html
+++ b/learn.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html class="learn-bg" lang="en">
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Learn</title>
+		<link rel="icon" href="Well-Being.png">
 	<link rel="stylesheet" type="text/css" href="base.css">
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato%7CLora" rel="stylesheet">
 </head>
-
 <body>
-
 	<header class="learn-header">
 
 		<div class="container">
@@ -25,7 +23,6 @@
 			</nav>
 		</div>
 	</header>
-
 	<!--<div id="learn-stuff">
 	<h1><span>Great Books to Relax With</span></h1>
 	<a href="https://www.amazon.com/dp/0143130773/ref=cm_sw_r_sms_c_api_i_pyH0CbQ0BD9D5"><img class="center" src="book1.jpg" height="400" alt=""> </a>
@@ -34,7 +31,6 @@
 		<h2 class="desc"><span>How to Love</span></h2>
 		<a href="https://www.amazon.com/dp/0143124056/ref=cm_sw_r_sms_c_api_i_ezH0Cb92AK2N1"><img class="center" src="book3.jpg" height="400" alt=""></a>
 		<h2 class="desc"><span>A Thousand Mornings</span></h2> -->
-
 	<div class="row" id="learn-stuff">
 		<h1><span>Great Books to Relax With</span></h1>
 		<div class="column">
@@ -50,11 +46,8 @@
 			<a href="https://www.amazon.com/dp/0143124056/ref=cm_sw_r_sms_c_api_i_ezH0Cb92AK2N1"><img class="center" src="book3.jpg" height="400" alt=""></a>
 		</div>
 	</div>
-
 	<form id="myBtn" style="display: inline" action="#top" method="get">
 		<button>Top</button>
 	</form>
-
 </body>
-
 </html>
