--- a/inspire.html
+++ b/inspire.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html class="inspire-bg" lang="en">
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Inspire</title>
+		<link rel="icon" href="Well-Being.png">
 	<link rel="stylesheet" type="text/css" href="base.css">
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato%7CLora" rel="stylesheet">
 </head>
-
-
 <body>
-
 	<header class="inspire-header">
 
 		<div class="container">
@@ -28,8 +25,6 @@
 	</header>
 
 	<h1>Find...What Inspires You</h1>
-
-
 	<iframe align="center" width="650" height="400" src="https://www.youtube.com/embed/MA86tG0VuRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 	<!--	<video class="center" width="650" height="400" controls>
@@ -38,7 +33,6 @@
 	</video> -->
 
 	<h2>Other Ways to Find Inspiration</h2>
-
 	<div>
 		<ul id="inspoul">
 			<li class="inspoli">Adopt a pet</li>
@@ -53,11 +47,9 @@
 			<li class="inspoli">Disconnect from electronics/social media</li>
 		</ul>
 	</div>
-
 	<form id="myBtn" style="display: inline" action="#top" method="get">
 		<button>Top</button>
 	</form>
-
 	<!--	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>
 eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
 		enim ad minim veniam, quis nostrud exercitation ullamco. </p>
@@ -68,6 +60,4 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
 				eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
 				enim ad minim veniam, quis nostrud exercitation ullamco. </p> -->
 </body>
-
-
 </html>
