--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<a class="center outbound" href="https://www.calm.com/">Calm</a>
 		</div>
 		<div class="column">
-			<img class="center" id="donothing" src="Donothing.png" alt="DoNothing" width="650" height="500">
+			<img class="center" id="donothing" src="donothing.png" alt="DoNothing" width="650" height="500">
 			<a class="center outbound" href="http://www.donothingfor2minutes.com/">Do Nothing for 2 Minutes</a>
 		</div>
 	</div>
