--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html class="home-bg" lang="en">
 <head>
+	<!--
+   Author: Jasmyne Monaco
+   Date:  05-14-2019
+   Filename: index.html
+      -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Peace & Wellbeing</title>
 	<link rel="icon" href="Well-Being.png">
