--- a/inspire.html
+++ b/inspire.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html class="inspire-bg" lang="en">
 <head>
+	<!--
+   Author: Jasmyne Monaco
+   Date:  05-14-2019
+   Filename: inspire.html
+      -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Inspire</title>
 		<link rel="icon" href="Well-Being.png">
