--- a/learn.html
+++ b/learn.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html class="learn-bg" lang="en">
 <head>
+	   <!--
+   Author: Jasmyne Monaco
+   Date:  05-14-2019
+   Filename: learn.html
+      -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Learn</title>
 		<link rel="icon" href="Well-Being.png">
