--- a/practice.html
+++ b/practice.html
@@ -2,6 +2,11 @@
 <html class="learn-bg" lang="en">
 
 <head>
+	   <!--
+   Author: Jasmyne Monaco
+   Date:  05-14-2019
+   Filename: practice.html
+      -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Learn</title>
 	<link rel="stylesheet" type="text/css" href="base.css">
